kube/Gatekeeper-OPA/RequiredLabels.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: resource-must-have-handson-labels
spec:
  match:
    kinds:
      - apiGroups: ["apps",""]
        kinds: ["Pod","Deployment"]
  parameters:
    labels: ["yuanchaoaws"]
