kube/Gatekeeper-OPA/replicacountlimit_template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: replicacountlimit
spec:
  crd:
    spec:
      names:
        kind: Replicacountlimit
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          properties:
            min:
              type: integer
            max:
              type: integer
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package replicacountlimit

        violation[{"msg": msg, "details": {"missing_replicas": missing}}] {
          ns_target := ["depolyment-dev","depolyment-prod"]
          ns := ns_target[_]
          ns_input := input.review.object.metadata.namespace
          ns == ns_input
          provided := input.review.object.spec.replicas
          required := input.parameters.min
          missing := required - provided
          missing > 0
          msg := sprintf("you need at least %v replicas, [required])
        }

        violation[{"msg": msg, "details": {"missing_replicas": missing}}] {
          provided := input.review.object.spec.replicas
          required := input.parameters.max
          missing := required - provided
          missing < 0
          msg := sprintf("you can only have %v replicas", [required])
        }
